--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hi my name is ama !!!</h1>
+    <h1>Hi my name is ama :) </h1>
 </body>
 </html>
